block B - topology